--- a/web/css/carehome.css
+++ b/web/css/carehome.css
@@ -319,7 +319,7 @@ body {
 
 .section{
 /*    background: #232829;*/
-    background: -moz-linear-gradient(50% 0% -90deg, #000 0%, #232829 100%);
+    /*background: -moz-linear-gradient(50% 0% -90deg, #000 0%, #232829 100%);*/
 /*
     background: -o-linear-gradient(-90deg, #000 0%, #232829 100%);
     background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0, #000), color-stop(1, #232829));
