--- a/web/css/custom.css
+++ b/web/css/custom.css
@@ -1,13 +1,17 @@
+body{
+	background-color: #f9f9f9;
+}
+
 .the-tagcloud {
-    margin: 5px 0 10px;
+/*    margin: 5px 0 10px;
     padding: 8px;
     border: 1px solid #ddd;
     line-height: 1.8em;
-    word-spacing: 3px;
+    word-spacing: 3px;*/
 }
 
 .tag-link,.tag-link-2{
-	padding-right: 10px;
+	/*padding-right: 10px;*/
 	/*float: left;*/
 	/*background-color: green;*/
 }
@@ -60,3 +64,157 @@
 .tagchecklist{
 	padding-left: 15px;
 }
+
+
+.tabsdemoDynamicHeight md-content md-tabs {
+    border: 1px solid #e1e1e1; 
+}
+
+
+/*Navigation*/
+
+.nav-header{
+	padding-right: 20px;
+	padding-left: 20px;
+}
+
+.profile-menu-image{
+	margin-bottom: 10px;
+}
+
+/*MAIN PAGE*/
+#main-page{
+	padding: 0px 20px 0px 20px;
+}
+
+/* OFFICE HOME */
+.offices-menu-list{
+
+	text-transform: uppercase;
+
+
+
+}
+
+.offices-menu-list li{
+/*float: left;*/
+	padding: 10px;
+	list-style: none;
+
+
+}
+
+.office-menu-list-item , .office-menu-list-item-active-list{
+	cursor: pointer;
+	text-decoration: none;
+	margin-bottom: 1px;
+	border-bottom: 1px solid transparent;
+}
+.office-menu-list-item-active-list{
+	/*cursor: pointer;
+	text-decoration: none;
+	margin-bottom: 1px;*/
+	border-bottom: 1px solid;
+}
+
+.office-menu-list-item-active-list .office-menu-list-item-active {
+	color: blue;
+}
+
+.office-menu-list-item a:hover{
+	
+	text-decoration: none;
+
+}
+
+.office-menu-list-item a{
+	
+	color: #000 !important;
+
+}
+
+
+.office-menu-list-item:hover{
+	
+	/*background-color: #cccccc;*/
+	border-bottom: 1px solid #000;
+
+}
+
+#office-info-header .office-info-header-item{
+	padding-right: 15px;
+	/*padding-left: 15px;*/
+	padding-top: 10px;
+} 
+
+#office-info-header{
+	background-color: #f3f3f3;
+} 
+
+#office-info-header .office-name{
+	/*border-right: 1px solid;*/
+	/*padding-right: 15px;*/
+	font-size: 2.92rem;
+	margin-top: -13px;
+}
+
+.office-info-image{
+
+}
+
+
+.office-home-info-table-left{
+/*	border-right: 1px solid;
+	padding-right: 20px;*/
+}
+
+.xxc{
+	/*overflow: auto;*/
+/*	overflow-y: scroll;
+	overflow-x: scroll;
+	height: 400px;*/
+}
+
+
+/*BREADCRUMB*/
+.breadcrumb {
+  /*padding: 8px 15px;*/
+  /*margin-bottom: 20px;*/
+  list-style: none;
+  background-color: #f5f5f5;
+  border-radius: 4px;
+}
+.breadcrumb > li {
+  display: inline-block;
+}
+.breadcrumb > li + li:before {
+  /*padding: 0 5px;*/
+  color: #ccc;
+  content: "/\00a0";
+}
+.breadcrumb > .active {
+  color: #777;
+}
+
+
+.preloader-wrapper{
+	/* position: absolute;
+    left: 50%;
+    top: 35%;
+    display: none;
+    z-index: 1000;
+    /*height: 31px;
+    width: 31px;*/*/
+}
+
+.tag-link:hover{
+	cursor: pointer;
+
+}
+
+!AmFull!4_J3sus!
+
+
+
+
+
