--- a/web/css/custom.css
+++ b/web/css/custom.css
@@ -275,7 +275,7 @@ body{
 }
 
 #office-info-header a{
-	margin-top: 30px;
+	/*margin-top: 30px;*/
 }
 
 
@@ -286,7 +286,7 @@ body{
 
 
 
-.table-bordered {
+/*.table-bordered {
   border: 1px solid #ddd;
 }
 .table-bordered > thead > tr > th,
@@ -327,12 +327,37 @@ body{
 
   .table-striped > tbody > tr:nth-of-type(odd) {
   background-color: #f9f9f9;
-}
+}*/
 
 
 #offtime .fa .fa-close{
 	font-size: 30px !important;
 }
+
+a #xxx .fa .fa-ellipsis-v{
+	font-size: 40px !important;
+
+}
+
+/**/
+
+input:not([type]), 
+input[type=text], 
+input[type=password], 
+input[type=email], 
+input[type=url], 
+input[type=time], 
+input[type=date], 
+input[type=datetime], 
+input[type=datetime-local], 
+input[type=tel], 
+input[type=number], 
+input[type=search], 
+textarea.materialize-textarea{
+    font-size: 1.2rem !important;
+}
+
+
 
 
 
